[skip ci] updated

--- a/series/09.md
+++ b/series/09.md
@@ -23,7 +23,7 @@
 では、この過程を「逆再生」できたらどうなるか。一様に拡散したインクが、徐々に凝縮し、元の形を取り戻す。これが **Reverse Process（逆過程）** であり、拡散モデルの生成プロセスそのものである。
 
 > [!NOTE]
-> **熱力学との類似：** この描像は、熱力学における「エントロピー増大」と「時間の矢」を想起させる。拡散は自然に起こるが、その逆は自然には起こらない。拡散モデルは、この「逆再生」を学習によって実現する。
+> **熱力学との類似（ただし比喩である）：** この描像は、熱力学における「エントロピー増大」と「時間の矢」を想起させる。拡散は自然に起こるが、その逆は自然には起こらない。ただし、拡散モデルの逆過程は**物理法則を時間反転しているわけではない**。Forward Processとは**別の確率過程を学習して構成**している。熱力学的な比喩は直感を助けるが、物理的可逆性とは異なる概念である。
 
 本回では、この直感を数学的に定式化し、幾何学的な視点から再解釈する。SDE（確率微分方程式）とODE（常微分方程式）の対応、スコア関数の意味、そして「ベクトル場に沿った積分」という視点が、生成モデルの本質をどう照らすかを見ていく。
 
@@ -82,6 +82,9 @@ $$d\mathbf{x}_t = \left[-\frac{\beta_t}{2}\mathbf{x}_t - \beta_t \nabla_{\mathbf
 
 ここで $d\bar{\mathbf{W}}_t$ は逆時間のブラウン運動、$\nabla_{\mathbf{x}} \log p_t(\mathbf{x})$ は**スコア関数**である。
 
+> [!IMPORTANT]
+> **時間方向の注意：** 上記の式は「サンプリング方向」（ $t: T \to 0$ ）の記法で書いている。文献によっては、逆時間変数 $\tau = T - t$ を導入して $d\tau > 0$ で書く流儀もあり、その場合は符号が異なって見える。実装時には、**$dt$ の符号**と**スコア項の符号**の対応に注意が必要である。
+
 | 項 | 役割 |
 | --- | --- |
 | $-\frac{\beta_t}{2}\mathbf{x}_t$ | 元のドリフト項 |
@@ -107,12 +110,12 @@ $$\nabla_x \log p(x) = -x$$
 
 スコアは「$x > 0$ なら負、$x < 0$ なら正」、つまり**常に原点（モードの位置）に向かう**。
 
-多峰性の分布では、スコアは「最も近いモードに向かう」方向を指す。
+多峰性の分布では、スコアは**概ね「近いモードに向かう」傾向**を示す（ただし、これは直感的な理解であり、厳密には成分の分散・重み・次元によって複雑に変わる。特にモード間の境界付近では、単純な「最近傍モード」規則にはならない）。
 
 ```txt
 p(x) = 0.5 * N(-2, 1) + 0.5 * N(+2, 1)
 
-スコアのベクトル場:
+スコアのベクトル場（概念図）:
   ←← ← · → →→        ←← ← · → →→
      [モード1]           [モード2]
 ```
@@ -149,6 +152,11 @@ Reverse SDEは確率的であり、同じ初期ノイズから異なるサンプ
 $$\frac{d\mathbf{x}}{dt} = -\frac{\beta_t}{2}\mathbf{x}_t - \frac{\beta_t}{2} \nabla_{\mathbf{x}} \log p_t(\mathbf{x}_t)$$
 
 SDEと比較すると、ノイズ項 $\sqrt{\beta_t} \, d\bar{\mathbf{W}}_t$ が消え、代わりにスコア項の係数が半分になっている。
+
+> [!NOTE]
+> **係数の由来（一般形との対応）：** 一般のSDE $d\mathbf{x} = f(\mathbf{x}, t) dt + g(t) d\mathbf{W}$ に対応する確率フローODEは、
+> $$\frac{d\mathbf{x}}{dt} = f(\mathbf{x}, t) - \frac{1}{2} g(t)^2 \nabla_{\mathbf{x}} \log p_t(\mathbf{x})$$
+> という形になる。VP-SDEでは $f = -\frac{\beta_t}{2}\mathbf{x}$、$g = \sqrt{\beta_t}$ なので、$g^2 = \beta_t$ となり、スコア項の係数が $\frac{\beta_t}{2}$ になる。
 
 > [!NOTE]
 > **直感的理解：** SDEでは「ランダムに揺らぎながら確率の高い方向へ」、ODEでは「揺らがずに確率の高い方向へまっすぐ」進む。両者は、ある意味で「確率的な山登り」と「決定論的な山登り」の違いである。
@@ -200,9 +208,12 @@ $$\mathbf{x}_{k+1} = \mathbf{x}_k + \frac{\eta}{2} \nabla_{\mathbf{x}} \log p(\m
 
 ### 拡散モデルとの関係
 
-Langevin動力学は、拡散モデルの**Reverse Process（離散化版）**とほぼ同じ形をしている。
+Langevin動力学は、拡散モデルの**Reverse Process（離散化版）**と構造的に類似している。
 
 $$\mathbf{x}_{t-\Delta t} = \mathbf{x}_t + \beta_t \nabla_{\mathbf{x}} \log p_t(\mathbf{x}_t) \Delta t + \sqrt{2\beta_t \Delta t} \, \boldsymbol{\epsilon}$$
+
+> [!NOTE]
+> **係数の注意：** 上記の Langevin 式と拡散モデルの Reverse 離散化は「同型」だが、係数（$1/2$ がどこに入るか、拡散係数の定義、温度、$dt$ の符号）は定義や文献によって異なる。両者を厳密に対応させるには、各項の定義を揃える必要がある。
 
 違いは、拡散モデルでは**時間依存のスコア** $\nabla_{\mathbf{x}} \log p_t(\mathbf{x})$ を使うことである。これにより、「どの時刻のノイズレベルか」に応じた適切なデノイジングが可能になる。
 
@@ -278,20 +289,20 @@ $$\nabla_{\mathbf{x}} \log p(\mathbf{x}) = -\nabla_{\mathbf{x}} E(\mathbf{x})$$
 
 この視点は、確率分布を「静的な関数」としてではなく、「ダイナミクスの到達点」として理解することを可能にする。
 
-### word2vecの再評価：ベクトル演算の復権
+### word2vecの再評価：ベクトル演算の復権（解釈の一案）
 
 ここで、一見無関係に思える話題を接続しよう。
 
 word2vecの「王 - 男 + 女 = 女王」というベクトル演算は、かつては「おもちゃのような例題（toy problem）」と見なされることもあった。「たまたま上手くいく例」に過ぎないのではないか、と。
 
-しかし、確率フローODEの視点から見ると、これは**極めて厳密な力学計算**として再評価できる。
+確率フローODEの視点から見ると、これを**ベクトル場に沿った積分**という枠組みで**再解釈**することができる。
 
 $$\text{「王」} \xrightarrow{-\text{「男」方向}+\text{「女」方向}} \text{「女王」}$$
 
-この操作は、「意味空間における接ベクトルに沿った積分」と解釈できる。
+この操作は、「意味空間における接ベクトルに沿った移動」と解釈できる。
 
 > [!NOTE]
-> **「昔の直線は、実は接ベクトルの断片だった」：** word2vecの線形演算は、巨大な意味多様体の上を走る「接ベクトル」の断片と見なせる。現代の生成モデルは、この断片を無数に繋ぎ合わせ、滑らかな「思考の道」を作れるようになった。確率フローODEは、まさにその「繋ぎ合わせ」の数学的表現である。
+> **解釈の限界：** この見方は**一つの解釈**であり、「word2vecの線形演算が厳密に多様体上の測地線や接ベクトルの積分と同一である」という数学的証明があるわけではない。word2vecの埋め込み空間が実際にどのような幾何構造を持つかは、依然として研究対象である。ただし、「昔の直線的な演算が、実は高次元空間での意味ある操作だった」という直感を得る枠組みとしては有用である。
 
 ### 確率分布の時間発展
 
@@ -549,7 +560,9 @@ if __name__ == "__main__":
 ### DDIMサンプラー
 
 <details>
-<summary>コード例: 09_ddim_sampler.py</summary>
+<summary>コード例: 09_ddim_sampler.py（概念的な擬似コード）</summary>
+
+> **注意：** 以下は教育目的の概念実装であり、そのまま実行すると edge case でエラーになる可能性がある。実用には公式実装（diffusers 等）を参照のこと。
 
 ```09_ddim_sampler.py
 import torch
@@ -583,7 +596,7 @@ class SimpleNoisePredictor(nn.Module):
 
 @torch.no_grad()
 def ddim_sample(model, schedule, shape, steps=50, eta=0.0, device="cpu"):
-    """DDIMサンプリング
+    """DDIMサンプリング（概念実装）
 
     Args:
         model: ノイズ予測ネットワーク
@@ -610,7 +623,11 @@ def ddim_sample(model, schedule, shape, steps=50, eta=0.0, device="cpu"):
 
         # 現在のα
         alpha_t = alphas_cumprod[int(t)]
-        alpha_t_next = alphas_cumprod[int(t_next)] if t_next >= 0 else torch.tensor(1.0)
+        # t_next < 0 の場合は alpha = 1（完全にデノイズされた状態）
+        if t_next >= 0:
+            alpha_t_next = alphas_cumprod[int(t_next)]
+        else:
+            alpha_t_next = torch.tensor(1.0, device=device, dtype=alpha_t.dtype)
 
         # ノイズを予測
         t_tensor = torch.full((shape[0],), t, device=device, dtype=torch.long)
@@ -621,12 +638,19 @@ def ddim_sample(model, schedule, shape, steps=50, eta=0.0, device="cpu"):
 
         # ノイズの分散を計算（eta=0で決定論的）
         sigma_t = (
-            eta * torch.sqrt((1 - alpha_t_next) / (1 - alpha_t)) * torch.sqrt(1 - alpha_t / alpha_t_next)
+            eta * torch.sqrt((1 - alpha_t_next) / (1 - alpha_t + 1e-8))
+            * torch.sqrt(1 - alpha_t / (alpha_t_next + 1e-8))
         )
 
         # x_{t-1} を計算
-        dir_xt = torch.sqrt(1 - alpha_t_next - sigma_t**2) * eps_pred
-        noise = torch.randn_like(x) if sigma_t > 0 else 0
+        dir_xt = torch.sqrt(torch.clamp(1 - alpha_t_next - sigma_t**2, min=0)) * eps_pred
+
+        # sigma_t が実質ゼロかどうかを float で判定
+        sigma_val = sigma_t.item() if sigma_t.numel() == 1 else sigma_t.mean().item()
+        if sigma_val > 1e-8:
+            noise = torch.randn_like(x)
+        else:
+            noise = torch.zeros_like(x)
 
         x = torch.sqrt(alpha_t_next) * x0_pred + dir_xt + sigma_t * noise
 
@@ -704,6 +728,10 @@ def gaussian_score(x, mean=0.0, std=1.0):
 
 def mixture_score(x, means, stds, weights):
     """混合ガウス分布のスコア
+
+    注意: log_prob の計算では正規化定数（2π等）を一部省略している。
+    スコア（勾配）自体は定数項の影響を受けないため問題ないが、
+    表示される log_prob の絶対値は厳密な対数確率密度ではなく「比例」した値である。
 
     Args:
         x: 入力 [batch, dim]
@@ -892,13 +920,23 @@ if __name__ == "__main__":
 ### 球面拡散の概念実装
 
 <details>
-<summary>コード例: 09_spherical_diffusion.py</summary>
+<summary>コード例: 09_spherical_diffusion.py（概念デモ・幾何学的に不正確）</summary>
 
 ```09_spherical_diffusion.py
-"""球面上の拡散モデル（概念的な実装）
+"""球面上の拡散モデル（概念的なデモ）
 
-注意: これは教育目的の簡略化された実装であり、
-実際の球面拡散モデルはより複雑な数学（リーマン計量、測地線など）を必要とする。
+!!!!! 重要な注意 !!!!!
+このコードは教育目的の「直感的なデモ」であり、
+**真の球面ブラウン運動の正しい離散化ではない**。
+
+問題点:
+1. 「接空間でノイズ→射影」は、真の球面上SDE離散化と一致しない
+2. この近似は統計的バイアスを生む（特に大きな dt や高次元で顕著）
+3. 正しい実装には、指数写像（exponential map）や測地線に沿った移動、
+   または heat kernel の厳密な計算が必要
+
+本コードは「球面上でも拡散的な現象が考えられる」という直感を得るためのもので、
+研究・実用には専門文献や正しい実装を参照すること。
 """
 
 import matplotlib.pyplot as plt
@@ -920,9 +958,11 @@ def project_to_sphere(x):
 
 
 def spherical_brownian_step(x, dt, temperature=1.0):
-    """球面上のブラウン運動の1ステップ（近似）
+    """球面上のブラウン運動の1ステップ（非常に粗い近似）
 
-    接空間でガウスノイズを加え、球面に射影し直す
+    接空間でガウスノイズを加え、球面に射影し直す。
+    ※ これは真の球面ブラウン運動の離散化ではなく、
+       直感的なデモのための簡易実装である。
 
     Args:
         x: 現在の位置（単位球面上） [batch, dim]
@@ -964,20 +1004,23 @@ def spherical_forward_process(x_0, timesteps, dt=0.01):
 
 
 def estimate_vMF_concentration(x_samples):
-    """サンプルからvMF分布の集中度を推定
+    """サンプルからvMF分布の集中度を推定（粗い近似）
+
+    注意: この推定式は近似であり、次元・サンプル数・集中度によって
+    精度が大きく揺れる。厳密な推定には最尤推定や Bessel 関数の逆関数が必要。
 
     Args:
         x_samples: サンプル [batch, dim]
 
     Returns:
-        kappa: 推定された集中度
+        kappa: 推定された集中度（参考値）
         mean_dir: 推定された平均方向
     """
     mean_dir = x_samples.mean(dim=0)
     R = mean_dir.norm()
     mean_dir = F.normalize(mean_dir, dim=0)
 
-    # 近似式（高次元での近似）
+    # 近似式（高次元での近似、精度は限定的）
     dim = x_samples.shape[-1]
     kappa = R * (dim - R**2) / (1 - R**2 + 1e-8)
 
@@ -1113,7 +1156,7 @@ if __name__ == "__main__":
 
 **球面上の拡散**は別の定式化であり、最終状態は球面上の一様分布である。標準手法とは異なるが、方向データや正規化された表現との親和性を持つ。
 
-**word2vecの「ベクトル演算」**は、確率フローODEの視点から再評価できる。「意味空間における接ベクトルに沿った積分」として、より厳密な力学的解釈を与えることができる。
+**word2vecの「ベクトル演算」**は、確率フローODEの視点から**再解釈**できる。「意味空間における接ベクトルに沿った移動」という枠組みで捉えることで、線形演算に新たな直感を与えることができる（ただし、これは解釈の一案であり、厳密な数学的同一性の証明ではない）。
 
 > **拡散は「確率分布の時間発展」だが、空間選択（ $\mathbb{R}^d$ vs 球面）は別問題。本質は「流れの制御」にある。**
 
