--- a/series/09.md
+++ b/series/09.md
@@ -206,7 +206,10 @@ $$\mathbf{v}(\mathbf{x}, t) = -\frac{\beta_t}{2}\mathbf{x} - \frac{\beta_t}{2} \
 
 $$\mathbf{x}_{k+1} = \mathbf{x}_k + \frac{\eta}{2} \nabla_{\mathbf{x}} \log p(\mathbf{x}_k) + \sqrt{\eta} \, \boldsymbol{\epsilon}_k, \quad \boldsymbol{\epsilon}_k \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$$
 
-ここで $\eta$ はステップサイズである。 $k \to \infty$ で、 $\mathbf{x}_k$ の分布は $p(\mathbf{x})$ に収束する（適切な条件下で）。
+ここで $\eta$ は**ステップサイズ**（学習率のようなハイパーパラメータ）である。 $k \to \infty$ で、 $\mathbf{x}_k$ の分布は $p(\mathbf{x})$ に収束する（適切な条件下で）。
+
+> [!NOTE]
+> **Langevin式のバリエーション：** 文献によっては、ステップサイズを $\epsilon$ と書き、ノイズ項を $\sqrt{2\epsilon}$ とする場合や、スコア項に係数をつけない定義など、バリエーションが無数にある。本資料の式は一般的な形の一つであり、実装時には使用する文献の定義を確認すること。
 
 ### 拡散モデルとの関係
 
@@ -940,7 +943,10 @@ if __name__ == "__main__":
 - 射影ベースの近似も、非常に小さい dt かつ低次元であれば、
   「球面上でも拡散的な現象が起きる」という直感を得る目的には使える
 - ただし、理論的な整合や定量的な精度は保証されない
-- 研究・実用には専門文献や正しい実装を参照すること
+
+研究・実用には:
+- 専門文献（Riemannian Score-based Generative Models 等）を参照
+- 専用ライブラリ（geomstats, geoopt 等）の使用を検討すること
 """
 
 import matplotlib.pyplot as plt
