--- a/series/09.md
+++ b/series/09.md
@@ -78,9 +78,9 @@ $$\mathbf{x}_\infty \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$$
 
 Forward Processを時間反転した **Reverse Process** は、以下のSDEで記述される：
 
-$$d\mathbf{x}_t = \left[-\frac{\beta_t}{2}\mathbf{x}_t - \beta_t \nabla_{\mathbf{x}} \log p_t(\mathbf{x}_t)\right] dt + \sqrt{\beta_t} \, d\bar{\mathbf{W}}_t$$
+$$d\mathbf{x}_t = \left[-\frac{\beta_t}{2}\mathbf{x}_t - \beta_t \nabla _{\mathbf{x}} \log p_t(\mathbf{x}_t)\right] dt + \sqrt{\beta_t} \, d\bar{\mathbf{W}}_t$$
 
-ここで $d\bar{\mathbf{W}}_t$ は逆時間のブラウン運動、 $\nabla_{\mathbf{x}} \log p_t(\mathbf{x})$ は**スコア関数**である。
+ここで $d\bar{\mathbf{W}}_t$ は逆時間のブラウン運動、 $\nabla _{\mathbf{x}} \log p_t(\mathbf{x})$ は**スコア関数**である。
 
 > [!IMPORTANT]
 > **時間方向の注意：** 上記の式は「サンプリング方向」（ $t: T \to 0$ ）の記法で書いている。文献によっては、逆時間変数 $\tau = T - t$ を導入して $d\tau > 0$ で書く流儀もあり、その場合は符号が異なって見える。実装時には、**dt の符号**と**スコア項の符号**の対応に注意が必要である。
@@ -96,7 +96,9 @@ $$d\mathbf{x}_t = \left[-\frac{\beta_t}{2}\mathbf{x}_t - \beta_t \nabla_{\mathbf
 スコア関数 $\nabla_{\mathbf{x}} \log p_t(\mathbf{x})$ は、確率密度の対数の勾配であり、「確率が高い方向」を指し示す。この項がなければ、逆時間のSDEは元のForward Processを再現しない。
 
 > [!NOTE]
-> **実装との対応：** 実際の拡散モデルでは、スコア関数を直接学習するのではなく、**ノイズ予測ネットワーク** $\boldsymbol{\epsilon}_\theta(\mathbf{x}_t, t)$ を学習する。両者は $\nabla_{\mathbf{x}} \log p_t(\mathbf{x}_t) \approx -\frac{\boldsymbol{\epsilon}_\theta(\mathbf{x}_t, t)}{\sqrt{1 - \bar{\alpha}_t}}$ という関係で結ばれる。
+> **実装との対応：** 実際の拡散モデルでは、スコア関数を直接学習するのではなく、
+> **ノイズ予測ネットワーク** $\boldsymbol{\epsilon} _\theta(\mathbf{x}_t, t)$ を学習する。
+> 両者は $\nabla _{\mathbf{x}} \log p_t(\mathbf{x}_t) \approx -\frac{\boldsymbol{\epsilon} _\theta(\mathbf{x}_t, t)}{\sqrt{1 - \bar{\alpha}_t}}$ という関係で結ばれる。
 
 ## スコア関数：確率の流れの方向
 
@@ -128,11 +130,11 @@ p(x) = 0.5 * N(-2, 1) + 0.5 * N(+2, 1)
 
 **スコアマッチング**（Hyvärinen, 2005）は、この問題を回避する手法である。以下の損失関数を最小化することで、スコア関数を近似するネットワーク $s_\theta(\mathbf{x}, t)$ を学習できる：
 
-$$\mathcal{L}_{\text{SM}} = \mathbb{E}_{t, \mathbf{x}_0, \boldsymbol{\epsilon}}\left[\left\|s_\theta(\mathbf{x}_t, t) - \nabla_{\mathbf{x}_t} \log p_{t|0}(\mathbf{x}_t \mid \mathbf{x}_0)\right\|^2\right]$$
+$$\mathcal{L} _{\text{SM}} = \mathbb{E} _{t, \mathbf{x} _0, \boldsymbol{\epsilon}}\left[\left\|s _{\theta} (\mathbf{x} _t, t) - \nabla _{\mathbf{x} _t} \log p _{t|0}(\mathbf{x} _t \mid \mathbf{x} _0)\right\|^2\right]$$
 
 Forward Processの閉形式解を使うと、条件付きスコアは：
 
-$$\nabla_{\mathbf{x}_t} \log p_{t|0}(\mathbf{x}_t \mid \mathbf{x}_0) = -\frac{\boldsymbol{\epsilon}}{\sqrt{1 - \bar{\alpha}_t}}$$
+$$\nabla _{\mathbf{x} _t} \log p _{t|0}(\mathbf{x}_t \mid \mathbf{x}_0) = -\frac{\boldsymbol{\epsilon}}{\sqrt{1 - \bar{\alpha}_t}}$$
 
 これが「ノイズ予測」と「スコア推定」が等価である理由である。
 
@@ -151,7 +153,7 @@ Reverse SDEは確率的であり、同じ初期ノイズから異なるサンプ
 
 これが**確率フローODE（Probability Flow ODE）**である：
 
-$$\frac{d\mathbf{x}}{dt} = -\frac{\beta_t}{2}\mathbf{x}_t - \frac{\beta_t}{2} \nabla_{\mathbf{x}} \log p_t(\mathbf{x}_t)$$
+$$\frac{d\mathbf{x}}{dt} = -\frac{\beta _t}{2}\mathbf{x} _t - \frac{\beta _t}{2} \nabla _{\mathbf{x}} \log p _t(\mathbf{x} _t)$$
 
 SDEと比較すると、ノイズ項 $\sqrt{\beta_t} \, d\bar{\mathbf{W}}_t$ が消え、代わりにスコア項の係数が半分になっている。
 
@@ -204,7 +206,7 @@ $$\mathbf{v}(\mathbf{x}, t) = -\frac{\beta_t}{2}\mathbf{x} - \frac{\beta_t}{2} \
 
 スコア関数 $\nabla_{\mathbf{x}} \log p(\mathbf{x})$ が分かれば、分布 $p(\mathbf{x})$ からサンプリングできる。これが **Langevin動力学** のアイデアである。
 
-$$\mathbf{x}_{k+1} = \mathbf{x}_k + \frac{\eta}{2} \nabla_{\mathbf{x}} \log p(\mathbf{x}_k) + \sqrt{\eta} \, \boldsymbol{\epsilon}_k, \quad \boldsymbol{\epsilon}_k \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$$
+$$\mathbf{x} _{k+1} = \mathbf{x} _k + \frac{\eta}{2} \nabla _{\mathbf{x}} \log p(\mathbf{x} _k) + \sqrt{\eta} \, \boldsymbol{\epsilon} _k, \quad \boldsymbol{\epsilon} _k \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$$
 
 ここで $\eta$ は**ステップサイズ**（学習率のようなハイパーパラメータ）である。 $k \to \infty$ で、 $\mathbf{x}_k$ の分布は $p(\mathbf{x})$ に収束する（適切な条件下で）。
 
@@ -215,7 +217,7 @@ $$\mathbf{x}_{k+1} = \mathbf{x}_k + \frac{\eta}{2} \nabla_{\mathbf{x}} \log p(\m
 
 Langevin動力学は、拡散モデルの**Reverse Process（離散化版）**と構造的に類似している。
 
-$$\mathbf{x}_{t-\Delta t} = \mathbf{x}_t + \beta_t \nabla_{\mathbf{x}} \log p_t(\mathbf{x}_t) \Delta t + \sqrt{2\beta_t \Delta t} \, \boldsymbol{\epsilon}$$
+$$\mathbf{x} _{t-\Delta t} = \mathbf{x} _t + \beta _t \nabla _{\mathbf{x}} \log p _t(\mathbf{x} _t) \Delta t + \sqrt{2\beta _t \Delta t} \, \boldsymbol{\epsilon}$$
 
 > [!NOTE]
 > **係数の注意：** 上記の Langevin 式と拡散モデルの Reverse 離散化は「同型」だが、係数（ $1/2$ がどこに入るか、拡散係数の定義、温度、 $dt$ の符号）は定義や文献によって異なる。両者を厳密に対応させるには、各項の定義を揃える必要がある。
@@ -341,7 +343,7 @@ $$\frac{d\mathbf{x}}{dt} = \mathbf{v}_\theta(\mathbf{x}, t)$$
 
 学習は、条件付きベクトル場 $\mathbf{u}_t(\mathbf{x} \mid \mathbf{x}_1)$ （データ点 $\mathbf{x}_1$ に向かうベクトル場）を使って行う：
 
-$$\mathcal{L}_{\text{FM}} = \mathbb{E}_{t, \mathbf{x}_0, \mathbf{x}_1}\left[\left\|\mathbf{v}_\theta(\mathbf{x}_t, t) - \mathbf{u}_t(\mathbf{x}_t \mid \mathbf{x}_1)\right\|^2\right]$$
+$$\mathcal{L} _{\text{FM}} = \mathbb{E} _{t, \mathbf{x} _0, \mathbf{x} _1}\left[\left\|\mathbf{v} _\theta(\mathbf{x} _t, t) - \mathbf{u} _t(\mathbf{x} _t \mid \mathbf{x} _1)\right\|^2\right]$$
 
 ### 拡散モデルとの関係
 
